syntax = "proto3";

option csharp_namespace = "Aspire.AspNet.Library.Protos";

package weather.v2;

import "google/api/annotations.proto";

// The weather forecast service definition.
service WeatherRpcServiceV2 {
  // Gets the weather forecast
  rpc GetWeatherForecast (WeatherForecastRequestV2) returns (WeatherForecastResponseV2) {
    option (google.api.http) = {
      get: "/v2/weather/forecast"
    };
  }
}

// The request message for the weather forecast.
message WeatherForecastRequestV2 {}

// The response message containing the weather forecast.
message WeatherForecastResponseV2 {
  repeated WeatherForecastV2 forecasts = 1;
}

// The weather forecast message.
message WeatherForecastV2 {
  string date = 1;
  int32 temperatureC = 2;
  int32 temperatureF = 3;
  string summary = 4;
  int32 humidity = 5;
}
